--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta http-equiv="Cache-Control" content="no-store,no-cache">
   <link rel="icon" href="/favicon.ico" />
   <title>Vue3-Vite-App-Demo</title>
+  <script  src="/global.js"></script>
 </head>
 <body>
   <div id="app"></div>
